<resources>
    <string name="app_name">ArrivyFirstTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="fore_casts">ForeCasts</string>
    <string name="get_start">Get Start</string>
    <string name="enter_city">Enter City</string>
    <string name="min_18">Min:18</string>
    <string name="today">Today</string>
    <string name="july_21">July,21</string>
    <string name="max_24">Max:24</string>
    <string name="precipitations">Precipitations</string>
    <string name="_19">19</string>
    <string name="_15_00">15:00</string>
    <string name="lahore">Lahore</string>
    <string name="sunrise">SunRise</string>
    <string name="sunset">SunSet:</string>
    <string name="_6_30_am">6:30 AM</string>
    <string name="_7_00_pm">7:00 PM</string>
    <string name="no_internet">No internet connection</string>
    <string name="enter_city_name">Please Enter city Name</string>
</resources>