<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_background_gradient"
    tools:context=".view.activities.SplashScreenActivity">
    <!-- Your UI Elements here, e.g., ImageView, TextView, Button -->
    <ImageView
        android:id="@+id/ivWeatherIcon"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/weather_icon"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvWeatherText"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvForeCastText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fore_casts"
        android:textSize="40sp"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/tvWeatherText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGetStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_start"
        android:textColor="@color/dark_blue"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="50dp"
        android:textStyle="bold"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>